--- a/templates/register.html
+++ b/templates/register.html
@@ -31,6 +31,9 @@
             <label class="label_form"><b>Prenom</b></label>
             <input type="text" placeholder="Didier" name="prenom" id="input" required>
 
+            <label class="label_form"><b>Classe</b></label>
+            <input type="text" placeholder="Seconde, Premiere ou Terminale" name="classe" id="input" required>
+
             <label class="label_form"><b>Email</b></label>
             <input type="email" placeholder="dupont.didier@gmail.com" name="email" id="input" required>
 
